--- a/src/static/css/register.css
+++ b/src/static/css/register.css
@@ -15,6 +15,7 @@
 #p-title { 
     grid-area: header; 
     text-align: center;
+    margin-top: 30px;
 }
 #p-nameFirst { grid-area: first; }
 #p-nameLast { grid-area: last; }
