--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -17,6 +17,8 @@
   <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
 
+<style>*{font-family: Verdana, sans-serif}</style>
+
 <body style="background-color: #252423; color:white">
   <div id="particles-js">  </div>
     <nav aria-label="breadcrumb">
